--- a/css/2_member-service.css
+++ b/css/2_member-service.css
@@ -24,7 +24,6 @@ body {
   .section-title img {
     width: 25vh;
   }
-
 }
 
 @media (max-width: 768px) {
@@ -46,8 +45,8 @@ body {
 }
 
 /* ----------form---------- */
-.label{
-  background-color: #168FA4;
+.label {
+  background-color: #168fa4;
   border: 3px solid #000;
   flex: 1;
   padding: 15px 0;
@@ -56,11 +55,11 @@ body {
   letter-spacing: 2.55px;
 }
 
-.short-label{
+.short-label {
   width: 26%;
 }
 
-input{
+input {
   flex: 3;
   border: 3px solid #000;
 }
@@ -69,7 +68,7 @@ input{
   color: #000;
 }
 
-textarea{
+textarea {
   border: 3px solid #000;
 }
 
@@ -77,16 +76,16 @@ textarea{
   color: #000;
 }
 
-.service-submit{
+.service-submit {
   border: 3px solid #000;
-  background-color: #FFC024;
+  background-color: #ffc024;
   border-radius: 0;
   font-size: 16px;
   font-weight: bold;
   letter-spacing: 2.55px;
 }
 
-.clear{
+.clear {
   border: 3px solid #fff;
   background-color: transparent;
   color: #fff;
@@ -96,6 +95,17 @@ textarea{
   letter-spacing: 2.55px;
 }
 
+.service input,
+textarea {
+  outline: none;
+  box-shadow: none !important;
+  border: 3px solid rgb(0, 0, 0) !important;
+}
+
+.btn:focus {
+  box-shadow: none;
+}
+
 /* ----------animation---------- */
 .title {
   text-align: center;
@@ -103,9 +113,9 @@ textarea{
 }
 
 #title-shape {
-  width: 20vw!important;
+  width: 20vw !important;
   margin-left: 0;
-  margin-top: 2vh!important;
+  margin-top: 2vh !important;
   line-height: 60vh;
   font-weight: 800;
 }
@@ -117,68 +127,94 @@ textarea{
   height: 20vh;
 }
 
-#shape-2{
+#shape-2 {
   margin-top: 75%;
   margin-left: 60%;
   width: 10vw;
   height: 10vh;
 }
 
-#shape-3{
+#shape-3 {
   margin-top: 0;
   margin-left: 0%;
   width: 8vw;
   height: 8vh;
 }
 
-#shape-1,#shape-2,#shape-3,#title-shape {position:absolute;  transition: .3s ease!important;
+#shape-1,
+#shape-2,
+#shape-3,
+#title-shape {
+  position: absolute;
+  transition: 0.3s ease !important;
 }
-
 
 #title-shape {
   animation: shake 10s;
-  animation-iteration-count: infinite; 
+  animation-iteration-count: infinite;
 }
-.shake-1{
-  animation: shake 8s; 
-  animation-iteration-count: infinite; 
+.shake-1 {
+  animation: shake 8s;
+  animation-iteration-count: infinite;
 }
-.shake-2{
-  animation: shake 12s; 
-  animation-iteration-count: infinite; 
+.shake-2 {
+  animation: shake 12s;
+  animation-iteration-count: infinite;
 }
-.shake-3{
-  animation: shake 10s; 
-  animation-iteration-count: infinite; 
+.shake-3 {
+  animation: shake 10s;
+  animation-iteration-count: infinite;
 }
 
 @keyframes shake {
-  0% { transform: translate(1px, 20px) rotate(0deg); }
-  10% { transform: translate(-3px, 10px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(4deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(2deg); }
-  90% { transform: translate(1px, 10px) rotate(-3deg); }
-  100% { transform: translate(1px, 20px) rotate(0deg); }
+  0% {
+    transform: translate(1px, 20px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-3px, 10px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(4deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(2deg);
+  }
+  90% {
+    transform: translate(1px, 10px) rotate(-3deg);
+  }
+  100% {
+    transform: translate(1px, 20px) rotate(0deg);
+  }
 }
 
-
 .title {
-  color:#F6F0E8;
+  color: #f6f0e8;
 }
 
 #shape-1 svg {
-  fill:#ED5B4C;
+  fill: #ed5b4c;
 }
 
-#shape-2,#shape-4 svg {
-  fill:#FFC024;
+#shape-2,
+#shape-4 svg {
+  fill: #ffc024;
 }
 
 #shape-3 svg {
-  fill:#168FA4;
+  fill: #168fa4;
 }
