--- a/css/1_member-center.css
+++ b/css/1_member-center.css
@@ -13,6 +13,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+.left-control{
+    margin-top: 10rem;
+}
+
 .banner img {
   width: 100%;
   height: 100%;
