--- a/css/3_B2B-index.css
+++ b/css/3_B2B-index.css
@@ -1,6 +1,10 @@
 /* * {
   outline: 1px solid red;
 } */
+button:focus {
+  box-shadow: none !important;
+}
+
 body {
   font-family: "Noto Sans TC", sans-serif;
   font-family: "Roboto", sans-serif;
@@ -21,6 +25,13 @@ body {
 
 .ogzcard {
   margin-top: 170px;
+}
+
+.ogzcard a {
+  display: block;
+  margin-top: 10px;
+  text-align: center;
+  color: #168fa4;
 }
 
 .indexcard {
@@ -96,7 +107,7 @@ body {
 }
 
 .picture {
-  margin: 110px auto 0;
+  margin: 90px auto 0;
   width: 230px;
   height: 230px;
   border-radius: 50%;
@@ -134,6 +145,87 @@ body {
   margin-top: 80px;
 }
 
+.word {
+  position: absolute;
+  width: 220px;
+  opacity: 0;
+  margin-left: 10px;
+}
+
+.wisteria {
+  color: #8e44ad;
+}
+
+.belize {
+  color: #2980b9;
+}
+
+.pomegranate {
+  color: #c0392b;
+}
+
+.green {
+  color: #16a085;
+}
+
+.midnight {
+  color: #2c3e50;
+}
+
+.word {
+  animation-iteration-count: infinite;
+  animation-name: anim;
+  animation-duration: 7.5s; /*calculate the exact time for looping*/
+}
+
+.word:nth-child(2) {
+  animation-delay: 1.5s;
+}
+
+.word:nth-child(3) {
+  animation-delay: 3s;
+}
+
+.word:nth-child(4) {
+  animation-delay: 4.5s;
+}
+
+.word:nth-child(5) {
+  animation-delay: 6s;
+}
+
+@keyframes anim {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+
+  6.66% {
+    transform: translateY(0);
+    opacity: 1;
+    transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+
+  20% {
+    transform: translateY(0);
+    opacity: 1;
+    transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+
+  46.66% {
+    transform: translateY(-100%);
+    opacity: 0;
+    transition: transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+
+  /*we give long pause after animation is done by this method*/
+  100% {
+    transform: translateY(-100%);
+    opacity: 0;
+    transition: transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+}
+
 /* Media Query */
 /* ============================= */
 /* Extra small 超小 (576px 以下) */
@@ -145,7 +237,7 @@ body {
 
   .background {
     width: 100%;
-    height: 1000px;
+    height: 1050px;
     background: url(../imgs/b2b/b2b_background.jpg) center no-repeat;
     background-size: cover;
   }
@@ -250,10 +342,17 @@ body {
   }
 
   .slogan p {
-    margin-left: 0;
-    margin-top: 60px;
+    margin-left: -30px;
+    margin-top: 80px;
     text-align: center;
     font-weight: 700;
     font-size: 24px;
+  }
+
+  .word {
+    position: absolute;
+    width: 100px;
+    opacity: 0;
+    margin-left: -20px;
   }
 }
