--- a/css/3_B2B-ticket-list.css
+++ b/css/3_B2B-ticket-list.css
@@ -1,6 +1,10 @@
 /* * {
   outline: 1px solid red;
 } */
+button:focus {
+  box-shadow: none !important;
+}
+
 body {
   font-family: "Noto Sans TC", sans-serif;
   font-family: "Roboto", sans-serif;
