--- a/css/1_member-center.css
+++ b/css/1_member-center.css
@@ -48,6 +48,11 @@ body {
   object-fit: contain;
 }
 
+.avatar:hover{
+  box-shadow: rgba(117, 118, 121, 0.596) 3px 3px 15px;  
+  transition: .5s;
+}
+
 .edit-member {
   text-align: center;
   /* margin: 4.5rem auto 2rem; */
@@ -78,7 +83,6 @@ body {
 /* 我的珍藏 */
 
 .card-wrap {
-  /* height: 500px; */
   border: 3px solid black;
   box-shadow: 8px 10px #ffc639;
 }
@@ -121,6 +125,7 @@ body {
   text-overflow: ellipsis;
   font-size: 1rem;
   font-weight: 600;
+  word-wrap: wrap;
 }
 
 .event-location {
@@ -141,6 +146,18 @@ body {
 .view-more {
   font-weight: 600;
   text-align: center;
+  -webkit-animation-name: prop-600;
+    -webkit-animation-duration: .5s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+}
+@-webkit-keyframes prop-600 {
+  0% {
+      -webkit-transform: translateX(0px);
+  }
+  100% {
+      -webkit-transform: translateX(-20px);
+  }
 }
 
 
@@ -151,19 +168,17 @@ body {
   border: 3px solid #000;
 }
 
-.main-info {
-    font-weight: bold;
-    letter-spacing: 2.55px;
-}
-
 .event-title{
-    font-size: 1rem;
+    font-size: 0.8rem;
+    letter-spacing: 1.2px;
+    font-weight: bold;
 }
 
 .sub-info p{
-  font-size: 0.8rem;
-  letter-spacing: 0.1rem;
+  font-size: 0.7rem;
+  letter-spacing: 1.2px;
   font-weight: 500;
+  line-height: 0.7rem;
 }
 
 .feedback {
@@ -213,7 +228,7 @@ html,
     main {
         background-color: transparent;
         width: 100vw;
-        height: 50vh;
+        height: 42vh;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -221,15 +236,14 @@ html,
 
     .path {
         /* background-color: rgb(30, 30, 30); */
-        /* border: 1vh solid blue; */
-        border-radius: 10vh;
-        width: 90vw;
-        height: 50vh;
+        /* border-radius: 10vh; */
+        width: 60vw;
+        height: 42vh;
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: 1fr 20vh 1fr;
         overflow: hidden;
-        margin-right: 430px;
+        margin-right: 620px;
     }
 
     .pac-m,
