--- a/css/1_member-signup.css
+++ b/css/1_member-signup.css
@@ -175,7 +175,7 @@ label {
   border: 3px solid #000;
   width: 100%;
   height: 15rem;
-  overflow: auto;
+  overflow: hidden;
   font-family: NotoSansTC-Regular, Roboto;
 }
 
@@ -206,8 +206,12 @@ label {
   height: 0.9375rem;
 }
 
-.signup-btn {
+/* .signup-btn {
   height: 50px;
+} */
+
+.btn:focus { 
+  outline: none !important;
 }
 
 .btn {
@@ -219,6 +223,50 @@ label {
   font-weight: 600;
   height: 2.5rem;
 }
+
+.btn:hover {
+  animation-name: rubberBand;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-iteration-count: 1;
+}
+
+@keyframes rubberBand {
+  from {
+    transform: scale3d(1, 1, 1);
+  }
+
+  30% {
+    transform: scale3d(1.25, 0.75, 1);
+  }
+
+  40% {
+    transform: scale3d(0.75, 1.25, 1);
+  }
+
+  50% {
+    transform: scale3d(1.15, 0.85, 1);
+  }
+
+  65% {
+    transform: scale3d(0.95, 1.05, 1);
+  }
+
+  75% {
+    transform: scale3d(1.05, 0.95, 1);
+  }
+
+  to {
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.rubberBand {
+  -webkit-animation-name: rubberBand;
+  animation-name: rubberBand;
+}
+
+/* button end */
 
 .line {
   border-top: 3px solid #aaa;
