--- a/css/0_blog.css
+++ b/css/0_blog.css
@@ -185,7 +185,7 @@ ul.issue-article-list {
   cursor: grab;
   overflow: hidden;
   width: 100%;
-  margin: 0 auto;
+  margin: 0 auto 3rem 0;
   padding: 25px 0;
 }
 
