--- a/css/3_B2B-Create-Event.css
+++ b/css/3_B2B-Create-Event.css
@@ -207,7 +207,7 @@ input[type="number"] {
 
 .error {
   visibility: visible;
-  color: #ff0000;
+  border-color: #ff0000;
 }
 
 .success {
@@ -261,6 +261,7 @@ input[type="number"] {
   }
 
   .fake_input {
+    opacity: 0;
   }
 
   .background {
