--- a/css/1_member-center.css
+++ b/css/1_member-center.css
@@ -13,6 +13,15 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+.box{
+
+}
+
+.guide-bar .item{
+border-bottom: 5px solid #002c80;
+color: rgba(240, 184, 32, 0.849);
+}
+
 
 .banner img {
   width: 100%;
@@ -73,6 +82,49 @@ body {
 .btn:focus {
   border: none;
 }
+
+
+.btn:hover {
+    animation-name: rubberBand;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    animation-iteration-count: 1;
+  }
+  
+  @keyframes rubberBand {
+    from {
+      transform: scale3d(1, 1, 1);
+    }
+  
+    30% {
+      transform: scale3d(1.25, 0.75, 1);
+    }
+  
+    40% {
+      transform: scale3d(0.75, 1.25, 1);
+    }
+  
+    50% {
+      transform: scale3d(1.15, 0.85, 1);
+    }
+  
+    65% {
+      transform: scale3d(0.95, 1.05, 1);
+    }
+  
+    75% {
+      transform: scale3d(1.05, 0.95, 1);
+    }
+  
+    to {
+      transform: scale3d(1, 1, 1);
+    }
+  }
+  
+  .rubberBand {
+    -webkit-animation-name: rubberBand;
+    animation-name: rubberBand;
+  }
 
 .sort {
   width: 100%;
@@ -868,6 +920,12 @@ html,
     main{
         display:none;
     }
+
+    .view-more{
+
+    }
+
+
 
     /* 票券管理 mobile */
 
