--- a/css/1_member-signup.css
+++ b/css/1_member-signup.css
@@ -37,6 +37,7 @@ body {
   transform: rotate(9deg);
   top: -3rem;
   right: 1rem;
+  transition: 0.5s;
 }
 
 .alert {
@@ -210,7 +211,7 @@ label {
   height: 50px;
 } */
 
-.btn:focus { 
+.btn:focus {
   outline: none !important;
 }
 
@@ -222,6 +223,10 @@ label {
   border-radius: 0px;
   font-weight: 600;
   height: 2.5rem;
+}
+
+.btn:active {
+  box-shadow: none !important;
 }
 
 .btn:hover {
