--- a/css/00_navbar.css
+++ b/css/00_navbar.css
@@ -155,6 +155,10 @@ input:focus {
   .cart-nav-small {
     display: none;
   }
+
+  .lg-none{
+    display: none;
+  }
 }
 
 @media (max-width: 992px) {
@@ -196,4 +200,9 @@ input:focus {
     html {
       font-size: 12px;
     }
+
+    .dropdown-menu.show{
+      display: none;
+    }
+
 }
