--- a/css/00_navbar.css
+++ b/css/00_navbar.css
@@ -156,13 +156,12 @@ input:focus {
     display: none;
   }
 
-  .lg-none{
+  .lg-none {
     display: none;
   }
 }
 
 @media (max-width: 992px) {
-
   .header-search {
     display: none;
   }
@@ -197,12 +196,15 @@ input:focus {
 }
 
 @media (max-width: 768px) {
-    html {
-      font-size: 12px;
-    }
+  html {
+    font-size: 12px;
+  }
 
-    .dropdown-menu.show{
-      display: none;
-    }
+  .dropdown-menu.show {
+    display: none;
+  }
 
+  .navbar {
+    justify-content: space-around;
+  }
 }
