--- a/css/2_member-accunt-set.css
+++ b/css/2_member-accunt-set.css
@@ -1,120 +1,143 @@
-
-
 * {
-    outline: 1px solid red;
-  }
+  outline: 1px solid red;
+}
 
 html {
-    font-size: 20px;
-  }
-  
-  body {
-    height: 100vh;
-    background-color: #002c80;
-  }
+  font-size: 20px;
+}
 
-  .account-set {
-    margin-top: 16rem;
-    background: #fff;
-    background-image: linear-gradient(rgba(22, 143, 164, 0.15) 1px, transparent 0),
-      linear-gradient(90deg, rgba(22, 143, 164, 0.15) 1px, transparent 0);
-    background-size: 0.75rem 0.75rem;
-    margin-bottom: 10rem;
-    position: relative;
-  }
+body {
+  height: 100vh;
+  background-color: #002c80;
+  font-family: "Noto Sans TC", sans-serif;
+  font-family: "Roboto", sans-serif;
+}
 
-  .list-title {
-    font-size: 1.2rem;
-    font-weight: 600;
-    text-align: center;
-    font-family: NotoSansTC-Regular, Roboto;
-    letter-spacing: 2px;
-    line-height: 1.8rem;
-    margin-top: 7rem;
-  }
+.btn:focus {
+  box-shadow: none !important;
+}
 
-  .signup-form {
-    margin-top: 40px;
-  }
+.account-set {
+  margin-top: 16rem;
+  background: #fff;
+  background-image: linear-gradient(rgba(22, 143, 164, 0.15) 1px, transparent 0),
+    linear-gradient(90deg, rgba(22, 143, 164, 0.15) 1px, transparent 0);
+  background-size: 0.75rem 0.75rem;
+  margin-bottom: 10rem;
+  position: relative;
+}
 
-  .long-clip-1 {
-    position: relative;
-  }
+.list-title {
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-align: center;
+  font-family: NotoSansTC-Regular, Roboto;
+  letter-spacing: 2px;
+  line-height: 1.8rem;
+  margin-top: 7rem;
+}
 
-  .little-head {
-    border-radius: 50%;
-    position: absolute;
-    top: 420px;
-    right: 470px;
-  }
+.signup-form {
+  margin-top: 40px;
+}
 
-  .inputform {
-    margin: 35px auto 0;
-    padding: 0;
-  }
+.long-clip-1 {
+  position: relative;
+}
 
-  /* trouble為錯誤提醒 */
+.little-head {
+  border-radius: 50%;
+  position: absolute;
+  top: 420px;
+  right: 470px;
+}
+
+/* --------title-bar------- */
+
+.title-out {
+  /* height: 50px; */
+  margin: 35px auto 0;
+}
+.title-bar {
+  height: 35px;
+  width: 105px;
+  padding: 0;
+  background-color: #ff4e42;
+  border: 3px solid #000;
+}
+
+.title-bar p {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.inputform {
+  margin: 35px auto 0;
+  padding: 0;
+}
+
+/* trouble為錯誤提醒 */
 .trouble {
-    position: absolute;
-    right: 10px;
-    top: 45px;
-    opacity: 0;
-    z-index: 1;
-  }
-  
-  .trouble2 {
-    display: none;
-    margin-top: 5px;
-    text-align: end;
-    opacity: 0;
-    color: #ff1000;
-  }
+  position: absolute;
+  right: 10px;
+  top: 45px;
+  opacity: 0;
+  z-index: 1;
+}
 
-  .inputbox {
-    margin-top: 12px;
-    width: 100%;
-    height: 50px;
-    border: 3px solid #000;
-    position: relative;
-  }
-  
-  .inputboxint {
-    margin-top: 12px;
-    width: 100%;
-    height: 300px;
-    border: 3px solid #000;
-  }
+.trouble2 {
+  display: none;
+  margin-top: 5px;
+  text-align: end;
+  opacity: 0;
+  color: #ff1000;
+}
 
-  .modbutton {
-    width: 100%;
-    margin: 40px auto 0;
-    padding: 0;
-  }
-  
-  .okbutton {
-    width: 100%;
-    margin: 0 auto;
-    padding: 0;
-    justify-content: space-around;
-  }
-  
-  .modify1 {
-    width: 140px;
-    height: 50px;
-    background-color: #ed5b4c;
-    border: 3px solid #000;
-    border-radius: 0;
-  }
-  
-  .modify2 {
-    width: 140px;
-    height: 50px;
-    background-color: #168fa4;
-    border: 3px solid #000;
-    border-radius: 0;
-  }
-  
-  button:disabled {
-    background: #000 !important;
-    border: 3px solid #000 !important;
-  }
+.inputbox {
+  margin-top: 12px;
+  width: 100%;
+  height: 50px;
+  border: 3px solid #000;
+  position: relative;
+}
+
+.inputboxint {
+  margin-top: 12px;
+  width: 100%;
+  height: 300px;
+  border: 3px solid #000;
+}
+
+.modbutton {
+  width: 100%;
+  margin: 40px auto 0;
+  padding: 0;
+}
+
+.okbutton {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  justify-content: space-around;
+}
+
+.modify1 {
+  width: 140px;
+  height: 50px;
+  background-color: #ed5b4c;
+  border: 3px solid #000;
+  border-radius: 0;
+}
+
+.modify2 {
+  width: 140px;
+  height: 50px;
+  background-color: #168fa4;
+  border: 3px solid #000;
+  border-radius: 0;
+}
+
+button:disabled {
+  background: #000 !important;
+  border: 3px solid #000 !important;
+}
