--- a/css/3_B2B-member-profile.css
+++ b/css/3_B2B-member-profile.css
@@ -42,7 +42,9 @@ body {
   width: 230px;
   height: 230px;
   border-radius: 50%;
-  background-color: #f1f9ff;
+  background: url(../imgs/B2B_imgs/b2b-3.jpg);
+  background-size: contain;
+  /* background-color: #f1f9ff; */
   border: 3px solid #000;
 }
 
@@ -59,7 +61,7 @@ body {
 }
 
 .introduction {
-  margin-top: 40px;
+  margin-top: 60px;
   text-align: center;
   font-size: 16px;
   font-weight: 700;
@@ -88,7 +90,7 @@ body {
 }
 
 .history {
-  margin: 40px auto 0;
+  margin: 30px auto 0;
   width: 380px;
   height: 90px;
   padding: 0;
